Bug 1742899: Exempt history entry loads from https-first mode. r=ckerschb,smaug,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D132566